--- a/Combined Visualization.Rmd
+++ b/Combined Visualization.Rmd
@@ -28,19 +28,19 @@ options(shiny.usecairo=TRUE)
 ```
 
 ```{r, echo = FALSE, result='hide', warning=FALSE, message=FALSE}
-stations <- st_read("~/Documents/DowntownLineAnalysis/shp/CCLNEL Stations Dissolved.shp")
+stations <- st_read("~/Documents/DowntownLineAnalysis/shp/CCLNEL Stations Dissolved.shp", quiet=TRUE)
 stations.centroid <- st_centroid(stations) %>%
   select(NAME)
 
-ccl_line <- st_read("~/Documents/DowntownLineAnalysis/shp/CCL Rail Line.shp")
-nel_line <- st_read("~/Documents/DowntownLineAnalysis/shp/NEL Rail Line.shp")
+ccl_line <- st_read("~/Documents/DowntownLineAnalysis/shp/CCL Rail Line.shp", quiet=TRUE)
+nel_line <- st_read("~/Documents/DowntownLineAnalysis/shp/NEL Rail Line.shp", quiet=TRUE)
 
 lines <- c("Circle Line", "North East Line")
 completion <- c(2013, 2003)
 
 lineData <- data.frame(lines, completion)
 
-priceShapes <- st_read("~/Documents/DowntownLineAnalysis/shp/CCLNEL Intersection.shp") %>%
+priceShapes <- st_read("~/Documents/DowntownLineAnalysis/shp/CCLNEL Intersection.shp", quiet=TRUE) %>%
   mutate(psm = resale_p_1 / floor_area) %>%
   mutate(year = as.numeric(substring(quarter, 1, 4))) %>%
   filter(year > 1999) %>%
@@ -68,8 +68,8 @@ model <- lm(data = priceShapes.mins, formula = psm ~ min_dist + age + years_sinc
 ```
 
 ```{r, echo = FALSE, results="hide", warning=FALSE, message=FALSE}
-subzones <- st_read('~/Documents/DowntownLineAnalysis/shp/Planning_Area_Census2010.shp')
-buffers <- st_read("~/Documents/DowntownLineAnalysis/shp/CCLNEL Multiring Buffers.shp") %>%
+subzones <- st_read('~/Documents/DowntownLineAnalysis/shp/Planning_Area_Census2010.shp', quiet=TRUE)
+buffers <- st_read("~/Documents/DowntownLineAnalysis/shp/CCLNEL Multiring Buffers.shp", quiet=TRUE) %>%
   mutate(unique = paste0(OBJECTID, ".", distance))
 #priceShapes <- st_read("~/Documents/DowntownLineAnalysis/shp/CCLNEL Intersection.shp") %>%
 #  mutate(unique = paste0(OBJECTID, ".", distance)) %>%
@@ -93,7 +93,7 @@ fluidRow(
                   choices = c("Circle Line", "North East Line"),
                   selected = "Circle")),
         column(4, radioButtons("flatType", "Flat Type:",
-             choices = unique(priceShapes$flat_type))),
+             choices = sort(unique(priceShapes$flat_type)))),
         column(4, radioButtons("modelType", "Model:",
              choices = c("Actual Prices", "Predicted Prices")))
 )
@@ -132,7 +132,7 @@ output$unsized <- renderPlot(width=1080, height=1080, {
         mutate(median_price = median_price / 1000)
       ggplot() +
         geom_sf(subzones, mapping = aes(), fill = "#C6DCEF", color = "#EEEEEE") +
-        geom_sf(stations, mapping = aes(), color = "#CCCCCC") +
+        geom_sf(stations %>% filter(train.st_2 == input$line), mapping = aes(), color = color_for_line, fill = color_for_line) +
         geom_sf(line_to_draw, mapping = aes(), color = color_for_line) +
         xlim(21000, 37000) +
         ylim(26000, 41000) +
@@ -194,7 +194,7 @@ output$unsized <- renderPlot(width=1080, height=1080, {
         mutate(median_price = median_price / 1000)
       ggplot() +
         geom_sf(subzones, mapping = aes(), fill = "#C6DCEF", color = "#EEEEEE") +
-        geom_sf(stations, mapping = aes(), color = "#CCCCCC") +
+        geom_sf(stations %>% filter(train.st_2 == input$line), mapping = aes(), color = color_for_line, fill = color_for_line) +
         geom_sf(line_to_draw, mapping = aes(), color = color_for_line) +
         xlim(21000, 37000) +
         ylim(26000, 41000) +
@@ -227,7 +227,23 @@ renderUI({
 
 We noticed our model tended to become a lot more accurate in the later years. Upon inspection of the data, we determined it could be due to the much larger amount of data in the later years as opposed to the earlier years. Hence, the model would be better fit for those regions. Out model parameters turned out as follows:
 ```{r, echo=FALSE}
-summary(model)
+beautify_summary <- function(model) {
+
+  coefficient_data_frame <- summary(model)$coefficients %>%
+    as.data.frame() %>%
+    select(Estimate) %>%
+    rename(Cofficient = Estimate)
+  
+  r_squared <- summary(model)$r.squared
+  adjusted_r_squared <- summary(model)$adj.r.squared
+  
+  return(list(paste("R^2 =", r_squared), 
+              paste("Adjusted R^2 =", adjusted_r_squared),  
+              knitr::kable(coefficient_data_frame)))
+}
+beautify_summary(model)
+beautify_summary(model)[1]
+beautify_summary(model)[2]
 ```
 
 ## Predictions
@@ -240,7 +256,7 @@ fluidRow(
                   choices = c("Circle Line", "North East Line"),
                   selected = "Circle")),
         column(6, radioButtons("flatType2", "Flat Type:",
-            choices = unique(priceShapes$flat_type)))
+            choices = sort(unique(priceShapes$flat_type))))
 )
 div(class="col-md-12", width="100%", sliderInput(inputId = "year2",
             width="100%",
@@ -248,79 +264,87 @@ div(class="col-md-12", width="100%", sliderInput(inputId = "year2",
             min = 2018,
             max = 2025,
             value = 2018))
-output$unsized2 <- renderPlot(width=1080, height=1080, {
-    line_to_draw2 <- ccl_line
-    color_for_line2 <- "#DC9F44"
-    colors <- c("#ffffe5", "#fff7bc", "#fee391", "#fec44f", "#fe9929", "#ec7014", "#cc4c02", "#8c2d04")
-    breaks <- c(0, 0.2, 2, 2.6, 3.2, 3.3, 3.8, 5, 10000)
-    labels <- c("0", "0.2", "2", "2.6", "3.2", "3.3", "3.8", "4+")
-    if(input$line2 == "North East Line") {
-      line_to_draw2 <- nel_line
-      color_for_line2 <- "#761E86"
-      colors <- c("#fcfbfd", "#efedf5", "#dadaeb", "#bcbddc", "#9e9ac8", "#807dba", "#6a51a3", "#4a1486")
-    }
-    priceShapes.unique2 <- priceShapes
-    
-    priceShapes.unique2 <- priceShapes.unique2 %>%
-      filter(train.st_2 == input$line2) %>%
-      mutate(year = input$year2) %>%
-      filter(flat_type == input$flatType2) %>%
-      group_by(unique) %>%
-      as.data.frame() %>%
-      left_join(as.data.frame(stations.centroid), by = c("NAME", "NAME")) %>%
-      rowwise()  %>%
-      mutate(age = year - lease_comm) %>%
-      mutate(years_since_line = year - as.numeric(lineData$completion[lineData$lines == train.st_2])) %>%
-      mutate(actual_distance = st_distance(geometry.x, geometry.y)) %>%
-      mutate(unique2 = paste0(block, " ", street_nam)) %>%
-      ungroup()
-    
-    for(i in 1:nrow(priceShapes.unique2)) {
-      priceShapes.unique2$years_since_line[i] <- priceShapes.unique2$year[i] - lineData$completion[lineData$lines == priceShapes.unique2$train.st_2[i]]
-    }
-    
-    priceShapes.unique2 <- priceShapes.unique2 %>%
-      group_by(block, street_nam) %>%
-      summarize(min_dist = min(actual_distance)) %>%
-      mutate(unique2 = paste0(block, " ", street_nam)) %>%
-      left_join(priceShapes.unique2, by = c("unique2", "unique2"))
-    
-    priceShapes.unique2$f = predict(model, newdata = priceShapes.unique2)
-    
-    priceShapes.unique2 <- priceShapes.unique2 %>%
-      group_by(unique) %>%
-      summarise(median_price = median(f), count = n())
-    
-    buffers.medians <- buffers %>%
-      left_join(priceShapes.unique2, by = c('unique' = 'unique')) %>%
-      drop_na(median_price) %>%
-      mutate(median_price = median_price / 1000)
-    ggplot() +
-      geom_sf(subzones, mapping = aes(), fill = "#C6DCEF", color = "#EEEEEE") +
-      geom_sf(stations, mapping = aes(), color = "#CCCCCC") +
-      geom_sf(line_to_draw2, mapping = aes(), color = color_for_line2) +
-      xlim(21000, 37000) +
-      ylim(26000, 41000) +
-      geom_sf(buffers.medians, mapping = aes(fill = cut(median_price,
-                                                        include.lowest = T,
-                                                        breaks = breaks)), color = NA) +
-      coord_sf(datum = NA) +
-      scale_fill_manual(values = colors, labels = labels, drop = F, guide = guide_legend(title = "Median House Price",
-                                                                                         title.theme = element_text(size = 25, angle = 0),
-                                                                                         title.position = "top",
-                                                                                         label.position = "top",
-                                                                                         label.theme = element_text(size = 16, angle = 0))) +
-      theme_bw() +
-      theme(legend.position=c(0.7, 0.1), legend.direction = "horizontal",
-            panel.grid.major = element_blank(),
-            panel.grid.minor = element_blank(),
-            panel.border = element_blank(),
-            panel.background = element_blank(),
-            legend.key.height = unit(8, "mm"),
-            legend.key.width = unit(16, "mm"))
-})
+# output$unsized2 <- renderPlot(width=1080, height=1080, {
+#     line_to_draw2 <- ccl_line
+#     color_for_line2 <- "#DC9F44"
+#     colors <- c("#ffffe5", "#fff7bc", "#fee391", "#fec44f", "#fe9929", "#ec7014", "#cc4c02", "#8c2d04")
+#     breaks <- c(0, 0.2, 2, 2.6, 3.2, 3.3, 3.8, 5, 10000)
+#     labels <- c("0", "0.2", "2", "2.6", "3.2", "3.3", "3.8", "4+")
+#     if(input$line2 == "North East Line") {
+#       line_to_draw2 <- nel_line
+#       color_for_line2 <- "#761E86"
+#       colors <- c("#fcfbfd", "#efedf5", "#dadaeb", "#bcbddc", "#9e9ac8", "#807dba", "#6a51a3", "#4a1486")
+#     }
+#     priceShapes.unique2 <- priceShapes
+#     
+#     priceShapes.unique2 <- priceShapes.unique2 %>%
+#       filter(train.st_2 == input$line2) %>%
+#       mutate(year = input$year2) %>%
+#       filter(flat_type == input$flatType2) %>%
+#       group_by(unique) %>%
+#       as.data.frame() %>%
+#       left_join(as.data.frame(stations.centroid), by = c("NAME", "NAME")) %>%
+#       rowwise()  %>%
+#       mutate(age = year - lease_comm) %>%
+#       mutate(years_since_line = year - as.numeric(lineData$completion[lineData$lines == train.st_2])) %>%
+#       mutate(actual_distance = st_distance(geometry.x, geometry.y)) %>%
+#       mutate(unique2 = paste0(block, " ", street_nam)) %>%
+#       ungroup()
+#     
+#     for(i in 1:nrow(priceShapes.unique2)) {
+#       priceShapes.unique2$years_since_line[i] <- priceShapes.unique2$year[i] - lineData$completion[lineData$lines == priceShapes.unique2$train.st_2[i]]
+#     }
+#     
+#     priceShapes.unique2 <- priceShapes.unique2 %>%
+#       group_by(block, street_nam) %>%
+#       summarize(min_dist = min(actual_distance)) %>%
+#       mutate(unique2 = paste0(block, " ", street_nam)) %>%
+#       left_join(priceShapes.unique2, by = c("unique2", "unique2"))
+#     
+#     priceShapes.unique2$f = predict(model, newdata = priceShapes.unique2)
+#     
+#     priceShapes.unique2 <- priceShapes.unique2 %>%
+#       group_by(unique) %>%
+#       summarise(median_price = median(f), count = n())
+#     
+#     buffers.medians <- buffers %>%
+#       left_join(priceShapes.unique2, by = c('unique' = 'unique')) %>%
+#       drop_na(median_price) %>%
+#       mutate(median_price = median_price / 1000)
+#     ggplot() +
+#       geom_sf(subzones, mapping = aes(), fill = "#C6DCEF", color = "#EEEEEE") +
+#       geom_sf(stations %>% filter(train.st_2 == input$line2), mapping = aes(), color = color_for_line2, fill = color_for_line2) +
+#       geom_sf(line_to_draw2, mapping = aes(), color = color_for_line2) +
+#       xlim(21000, 37000) +
+#       ylim(26000, 41000) +
+#       geom_sf(buffers.medians, mapping = aes(fill = cut(median_price,
+#                                                         include.lowest = T,
+#                                                         breaks = breaks)), color = NA) +
+#       coord_sf(datum = NA) +
+#       scale_fill_manual(values = colors, labels = labels, drop = F, guide = guide_legend(title = "Median House Price",
+#                                                                                          title.theme = element_text(size = 25, angle = 0),
+#                                                                                          title.position = "top",
+#                                                                                          label.position = "top",
+#                                                                                          label.theme = element_text(size = 16, angle = 0))) +
+#       theme_bw() +
+#       theme(legend.position=c(0.7, 0.1), legend.direction = "horizontal",
+#             panel.grid.major = element_blank(),
+#             panel.grid.minor = element_blank(),
+#             panel.border = element_blank(),
+#             panel.background = element_blank(),
+#             legend.key.height = unit(8, "mm"),
+#             legend.key.width = unit(16, "mm"))
+# })
+output$unsized2 <- renderImage({
+  list(src = paste0("~/Documents/DowntownLineAnalysis/plots/", input$line2, "-", input$year2, "-", input$flatType2, ".png"),
+         contentType = 'image/png',
+         width = 1080,
+         height = 1080,
+         alt = "This is alternate text")
+  }, deleteFile = FALSE)
+  
 renderUI({
-  plotOutput("unsized2", height = 1080)
+  imageOutput("unsized2", height = 1080)
 })
 ```
 
